[package]
name = "amity"
version = "0.6.1"
edition = "2024"
authors = ["Zakarum <zaq.dev@icloud.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/amity"
homepage = "https://github.com/zakarumych/amity"
repository = "https://github.com/zakarumych/amity"
readme = "README.md"
description = "Concurrency algorithms"
keywords = ["concurrency", "algorithms", "lock-free", "wait-free", "no-std"]
categories = ["concurrency", "algorithms", "no-std"]

[features]
std = ["alloc"]
alloc = []
default = ["std"]

spin = []
ring-buffer = ["alloc"]
flip-queue = ["spin", "ring-buffer"]
triple = []
broad = ["alloc", "spin", "triple"]

[dependencies]
lock_api = { version = "0.4" }

parking_lot = { version = "0.12", optional = true }

[package.metadata.docs.rs]
all-features = true
